--- a/digibank/.eslintrc
+++ b/digibank/.eslintrc
@@ -15,14 +15,17 @@
     "jest": true,
     "es6": true
   },
-  "plugins": [
-    "prettier"
-  ],
+  "plugins": ["prettier"],
   "rules": {
     "react/function-component-definition": "off",
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    ],
     "react/prop-types": "off",
     "react/button-has-type": "off",
     "import/no-extraneous-dependencies": [
@@ -37,6 +40,12 @@
         ]
       }
     ],
-    "prettier/prettier": ["error"]
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
