--- a/digibank/package.json
+++ b/digibank/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.5",
     "antd": "^5.1.0",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -49,7 +50,7 @@
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "prettier": "^2.7.1",
-    "sass": "^1.54.8",
+    "sass": "^1.61.0",
     "typescript": "^4.6.4",
     "vite": "^4.0.3",
     "vite-plugin-eslint": "^1.8.1"
