--- a/digibank/package.json
+++ b/digibank/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
+    "@mui/system": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.5",
     "antd": "^5.1.0",
     "axios": "^1.3.5",
