Add: CardComponent, SideBar, HomeTSX

--- a/digibank/.eslintrc
+++ b/digibank/.eslintrc
@@ -17,6 +17,13 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "jsx-a11y/label-has-associated-control": [ 2, {
+      "labelComponents": ["CustomLabel"],
+      "labelAttributes": ["inputLabel"],
+      "controlComponents": ["CustomInput"],
+      "assert": "both",
+      "depth": 3
+    }],
     "react/function-component-definition": "off",
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
