--- a/digibank/package.json
+++ b/digibank/package.json
@@ -28,7 +28,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
