--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ logs
 /digibank/*.sln
 /digibank/*.sw?
 
+/DigiBank_API/.vs
 /DigiBank_API/digibank_back/obj
 /DigiBank_API/digibank_back/bin
 /DigiBank_API/digibank_back/StaticFiles/Images/*
