--- a/digibank/package.json
+++ b/digibank/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "antd": "^5.1.0",
     "apexcharts": "^3.39.0",
+    "autonumeric": "^4.8.3",
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -40,6 +41,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^3.0.0",
