--- a/digibank/package.json
+++ b/digibank/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.2",
