--- a/digibank/package.json
+++ b/digibank/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-toastify": "^9.1.2"
