feat: add: digstore

--- a/digibank/package.json
+++ b/digibank/package.json
@@ -25,6 +25,9 @@
     "apexcharts": "^3.39.0",
     "autonumeric": "^4.8.3",
     "axios": "^1.3.5",
+    "canvas": "^2.11.2",
+    "color-thief-react": "^2.1.0",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -39,10 +42,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/gm": "^1.25.1",
     "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.2",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^3.0.0",
