--- a/digibank/package.json
+++ b/digibank/package.json
@@ -28,6 +28,7 @@
     "canvas": "^2.11.2",
     "color-thief-react": "^2.1.0",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
