--- a/digibank/package.json
+++ b/digibank/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -26,10 +27,12 @@
     "autonumeric": "^4.8.3",
     "axios": "^1.3.5",
     "canvas": "^2.11.2",
+    "chart.js": "^4.3.0",
     "color-thief-react": "^2.1.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-redux": "^8.0.2",
