--- a/digibank/package.json
+++ b/digibank/package.json
@@ -30,11 +30,13 @@
     "chart.js": "^4.3.0",
     "color-thief-react": "^2.1.0",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-number-format": "^5.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-toastify": "^9.1.2"
