--- a/digibank/package.json
+++ b/digibank/package.json
@@ -35,6 +35,7 @@
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-fast-marquee": "^1.6.0",
     "react-number-format": "^5.2.2",
     "react-redux": "^8.0.2",
