--- a/DigiBank_API/digibank_back/digibank_back.csproj
+++ b/DigiBank_API/digibank_back/digibank_back.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>digibank_back</RootNamespace>
   </PropertyGroup>
 
