feat: indicesCache, optionPage, DependencyInjection

--- a/DigiBank_API/digibank_back/appsettings.json
+++ b/DigiBank_API/digibank_back/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=VITOR-PC; initial catalog=DIGIBANK; user Id=sa; pwd=senai@132;",
+    "Matheus": "Data Source=DESKTOP-LEARTL9\\SQLExpress; initial catalog=DIGIBANK; user Id=sa; pwd=senai@132;"
+  }
 }
