--- a/digibank/package.json
+++ b/digibank/package.json
@@ -22,6 +22,15 @@
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@visx/curve": "^3.3.0",
+    "@visx/event": "^3.3.0",
+    "@visx/gradient": "^3.3.0",
+    "@visx/grid": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "@visx/shape": "^3.3.0",
+    "@visx/tooltip": "^3.3.0",
     "antd": "^5.1.0",
     "apexcharts": "^3.39.0",
     "autonumeric": "^4.8.3",
@@ -29,6 +38,8 @@
     "canvas": "^2.11.2",
     "chart.js": "^4.3.0",
     "color-thief-react": "^2.1.0",
+    "d3-array": "^3.2.4",
+    "d3-time-format": "^4.1.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
