feat: add Sacar, Depositar e Calcular Ganhos em modal

--- a/DigiBank_API/digibank_back/digibank_back.csproj
+++ b/DigiBank_API/digibank_back/digibank_back.csproj
@@ -6,6 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModel\NovaPasta1\**" />
+    <Compile Remove="ViewModel\NovaPasta\**" />
+    <Content Remove="ViewModel\NovaPasta1\**" />
+    <Content Remove="ViewModel\NovaPasta\**" />
+    <EmbeddedResource Remove="ViewModel\NovaPasta1\**" />
+    <EmbeddedResource Remove="ViewModel\NovaPasta\**" />
+    <None Remove="ViewModel\NovaPasta1\**" />
+    <None Remove="ViewModel\NovaPasta\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="CorsMiddleware.cs" />
     <Compile Remove="DTOs\InvestimentoGenerico.cs" />
     <Compile Remove="DTOs\InvestimentoOptionsCount.cs" />
