--- a/digibank/package.json
+++ b/digibank/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-fast-marquee": "^1.6.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-number-format": "^5.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
