--- a/digibank/package.json
+++ b/digibank/package.json
@@ -42,6 +42,7 @@
     "d3-time-format": "^4.1.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
@@ -64,6 +65,7 @@
     "@types/color-convert": "^2.0.0",
     "@types/gm": "^1.25.1",
     "@types/pdfmake": "^0.2.2",
+    "@types/qs": "^6.9.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.2",
